# binius_gpu

./: .gitignore  .gitmodules  README.md
hashcaster_sumcheck/c_impl/: Makefile  and_package.c  and_package.h  boolcheck.c  boolcheck.h  cobasis_frobenius_table.h  cobasis_frobenius_transpose_table.h  cobasis_table.h  compressed_poly.c  compressed_poly.h  debug_utils.c  debug_utils.h  efficient_matrix.c  efficient_matrix.h  evaluations.c  evaluations.h  field.c  field.h  frob_utils.c  frob_utils.h  frobenius_table.h  gf128_polyval.c  gf128_polyval.h  linear_check.c  linear_check.h  matrix_linear.c  matrix_linear.h  matrix_utils.c  matrix_utils.h  mle_poly.c  mle_poly.h  multi_claim.c  multi_claim.h  prod_check.c  prod_check.h  test_field.c  types.c  types.h  univariate_poly.c  univariate_poly.h
hashcaster_sumcheck/c_impl/tests/: Makefile  random.py  run_tests  test_and_package.c  test_and_package.h  test_boolcheck.c  test_boolcheck.h  test_compressed_poly.c  test_compressed_poly.h  test_efficient_matrix.c  test_efficient_matrix.h  test_evaluations.c  test_evaluations.h  test_field.c  test_field.h  test_helpers.h  test_linear_check.c  test_linear_check.h  test_matrix_linear.c  test_matrix_linear.h  test_matrix_utils.c  test_matrix_utils.h  test_mle.c  test_mle.h  test_multi_claim.c  test_multi_claim.h  test_prod_check.c  test_prod_check.h  test_univariate_poly.c  test_univariate_poly.h  tests_main.c
hashcaster_sumcheck/rust_impl/: Cargo.toml  frobenius_table.txt
hashcaster_sumcheck/rust_impl/binius_deps/utils/: Cargo.toml
sumcheck/: CMakeLists.txt
(+33 files in other folders)
